==> openwch/betaflight/src/platform/AT32/adc_at32f43x.c <==
#include <stdbool.h>
#include <stdint.h>
#include <string.h>
#include <math.h>
#include "platform.h"
#include "build/debug.h"
#include "drivers/dma_reqmap.h"
#include "drivers/io.h"
#include "drivers/io_impl.h"
#include "platform/rcc.h"
#include "drivers/resource.h"
#include "drivers/dma.h"
#include "platform/dma.h"
#include "drivers/sensor.h"
#include "drivers/adc.h"
#include "platform/adc_impl.h"
#include "pg/adc.h"
#define ADC_CHANNEL_VREFINT         ADC_CHANNEL_17
#define ADC_CHANNEL_TEMPSENSOR_ADC1 ADC_CHANNEL_16
#define ADC_TAG_MAP_VREFINT    0
#define ADC_TAG_MAP_TEMPSENSOR 1

static void adcInitDevice(const adc_type *dev, const int channelCount)
{
    adc_base_config_type adc_base_struct;

    adc_base_default_para_init(&adc_base_struct);   // not currently needed, but insurance against the struct being changed in the future
    adc_base_struct.sequence_mode = TRUE;           // reading multiple channels
    adc_base_struct.repeat_mode = TRUE;             // free running, so no need to retrigger
    adc_base_struct.data_align = ADC_RIGHT_ALIGNMENT;
    adc_base_struct.ordinary_channel_length = channelCount;

    adc_base_config((adc_type *)dev, &adc_base_struct);
    adc_resolution_set((adc_type *)dev, ADC_RESOLUTION_12B);
}

void adcInit(const adcConfig_t *config)
{
    uint32_t nChannelsUsed[ADCDEV_COUNT] = {0};

    setScalingFactors();

    memset(adcOperatingConfig, 0, sizeof(adcOperatingConfig));  // adcOperatingConfig defined in generic adc.c

    // Set channels (ioTags) for enabled ADC inputs
    if (config->vbat.enabled) {
        adcOperatingConfig[ADC_BATTERY].tag = config->vbat.ioTag;
    }

    if (config->rssi.enabled) {
        adcOperatingConfig[ADC_RSSI].tag = config->rssi.ioTag;
    }

    if (config->external1.enabled) {
        adcOperatingConfig[ADC_EXTERNAL1].tag = config->external1.ioTag;
    }

    if (config->current.enabled) {
        adcOperatingConfig[ADC_CURRENT].tag = config->current.ioTag;
    }

    // loop over all possible channels and build the adcOperatingConfig to represent
    // the set of enabled channels
    for (int i = 0; i < ADC_SOURCE_COUNT; i++) {
        int map;
        int dev;

        switch(i) {
#ifdef USE_ADC_INTERNAL
        case ADC_TEMPSENSOR:
            map = ADC_TAG_MAP_TEMPSENSOR;
            dev = ADCDEV_1;
            break;
        case ADC_VREFINT:
            map = ADC_TAG_MAP_VREFINT;
            dev = ADCDEV_1;
            break;
#endif
        default:
            if (!adcOperatingConfig[i].tag) {
                continue;
            }

            map = adcFindTagMapEntry(adcOperatingConfig[i].tag);
            if (map < 0) {
                continue;
            }

            // Since ADC1 can do all channels this will only ever return adc1 and is unnecessary

            // Find an ADC instance that can be used for the given TagMap index.
            // for (dev = 0; dev < ADCDEV_COUNT; dev++) {
            //     #ifndef USE_DMA_SPEC
            //     if (!adcDevice[dev].ADCx || !adcDevice[dev].dmaResource) {
            //         continue;
            //     }
            //     #else
            //     if (!adcDevice[dev].ADCx) {
            //         continue;
            //     }
            //     #endif

            //     if (adcTagMap[map].devices & (1 << dev)) {
            //         break;
            //     }
            // }
            dev = ADCDEV_1;
        }

        adcOperatingConfig[i].adcDevice = dev;
        adcOperatingConfig[i].adcChannel = adcTagMap[map].channel;
        adcOperatingConfig[i].sampleTime = ADC_SAMPLETIME_92_5;
        adcOperatingConfig[i].enabled = true;

        nChannelsUsed[dev] += 1;    // increase the active channel count for this device

        // Enable the gpio for analog input
        if (adcOperatingConfig[i].tag) {
            IOInit(IOGetByTag(adcOperatingConfig[i].tag), OWNER_ADC_BATT + i, 0);
            IOConfigGPIO(IOGetByTag(adcOperatingConfig[i].tag), IO_CONFIG(GPIO_MODE_ANALOG,GPIO_DRIVE_STRENGTH_MODERATE, 0, GPIO_PULL_NONE));
        }
    }   // for each channel

    adc_reset();    // reset all ADC instances

    // Enable the clock (power up the circuit)
    // This has to be done before calling adc_common_config for reasons that are unclear
    // NB only ADC1 will have any channels, so this loop for pedantry only
    for (int i = 0; i < ADCDEV_COUNT; i++) {
        if (nChannelsUsed[i] > 0) {
            RCC_ClockCmd(adcHardware[0].rccADC, ENABLE);
        }
    }

    // Common config applies equally to all three ADCs, so only apply it once
    adc_common_config_type adc_common_struct;
    adc_common_default_para_init(&adc_common_struct);
    adc_common_struct.combine_mode = ADC_INDEPENDENT_MODE;
    adc_common_struct.div = ADC_HCLK_DIV_4;
    adc_common_struct.common_dma_mode = ADC_COMMON_DMAMODE_DISABLE;
    adc_common_struct.common_dma_request_repeat_state = FALSE;
    adc_common_struct.sampling_interval = ADC_SAMPLING_INTERVAL_5CYCLES;
    adc_common_struct.tempervintrv_state = TRUE;    // internal channels need to be enabled before use

    adc_common_config(&adc_common_struct);

    // Only adc1 will have any channels assigned to it after the code above, so this can be simplified

    int  dmaBufferIndex = 0;
    for (int dev = 0; dev < ADCDEV_COUNT; dev++) {
        const adcDevice_t *adc = &adcHardware[dev];

        // skip this device if it doesn't have any active channels
        if (nChannelsUsed[dev] == 0) {
            continue;
        }

        adcInitDevice(adc->ADCx, nChannelsUsed[dev]);

        // Set the oversampling ratio and matching shift
        adc_oversample_ratio_shift_set(adc->ADCx, ADC_OVERSAMPLE_RATIO_64, ADC_OVERSAMPLE_SHIFT_6);

#ifdef USE_DMA_SPEC

        // Setup the DMA channel so that data is automatically and continuously transferred from the ADC output register
        // to the results buffer

        const dmaChannelSpec_t *dmaSpec = dmaGetChannelSpecByPeripheral(DMA_PERIPH_ADC, dev, config->dmaopt[dev]);
        if (dmaSpec == NULL) {
            return;
        }

        dmaIdentifier_e dmaIdentifier = dmaGetIdentifier(dmaSpec->ref);
        if (!dmaAllocate(dmaIdentifier, OWNER_ADC, RESOURCE_INDEX(dev))) {
            return;
        }

        dmaEnable(dmaIdentifier);   // enables clock/power
        xDMA_DeInit(dmaSpec->ref);

        dma_init_type dma_init_struct;
        dma_default_para_init(&dma_init_struct);
        dma_init_struct.buffer_size = nChannelsUsed[dev];
        dma_init_struct.direction = DMA_DIR_PERIPHERAL_TO_MEMORY;
        dma_init_struct.memory_data_width = DMA_MEMORY_DATA_WIDTH_WORD;
        dma_init_struct.memory_inc_enable = TRUE;
        dma_init_struct.peripheral_data_width = DMA_PERIPHERAL_DATA_WIDTH_WORD;
        dma_init_struct.peripheral_inc_enable = FALSE;
        dma_init_struct.priority = DMA_PRIORITY_LOW;
        dma_init_struct.loop_mode_enable = TRUE;    // operate as a circular buffer, no interrupt handling required

        dma_init_struct.memory_base_addr = (uint32_t)&(adcConversionBuffer[dmaBufferIndex]);
        dma_init_struct.peripheral_base_addr = (uint32_t)&(adc->ADCx->odt);

        xDMA_Init(dmaSpec->ref, &dma_init_struct);
        dmaMuxEnable(dmaIdentifier, dmaSpec->dmaMuxId);

        xDMA_Cmd(dmaSpec->ref,TRUE);    // means dma_channel_enable

        adc_dma_mode_enable(adc->ADCx, TRUE);
        adc_dma_request_repeat_enable(adc->ADCx, TRUE);

#endif //end of USE_DMA_SPEC

        // set each channel into the auto sequence for this ADC device
        for (int adcChan = 0; adcChan < ADC_SOURCE_COUNT; adcChan++)
        {
            // only add enabled channels for the current dev (can be simplified if we drop the pretense at handling adc2 and 3)
            if (adcOperatingConfig[adcChan].enabled && adcOperatingConfig[adcChan].adcDevice == dev)
            {
                adcOperatingConfig[adcChan].dmaIndex = dmaBufferIndex++;
                adc_ordinary_channel_set(adc->ADCx,
                    adcOperatingConfig[adcChan].adcChannel,
                    adcOperatingConfig[adcChan].dmaIndex+1, // This is the sequence number for the adc conversion
                    adcOperatingConfig[adcChan].sampleTime );
            }
        }

        adc_enable(adc->ADCx, TRUE);
        while (adc_flag_get(adc->ADCx, ADC_RDY_FLAG) == RESET); // wait for ready

        adc_calibration_init(adc->ADCx);
        while (adc_calibration_init_status_get(adc->ADCx));
        adc_calibration_start(adc->ADCx);
        while (adc_calibration_status_get(adc->ADCx));

        adc_ordinary_software_trigger_enable(adc->ADCx, TRUE);  // start sampling
    }
}
